js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-return-await-typeof-import-source.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
await
typeof
import
.
source
)
